--- a/project-bolt-sb1-LocalAI_X/project/package.json
+++ b/project-bolt-sb1-LocalAI_X/project/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.81.2",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
+    "dompurify": "^3.2.6",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/dompurify": "^3.2.0",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/react-syntax-highlighter": "^15.5.11",
